--- a/car-details-quick-sale.html
+++ b/car-details-quick-sale.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=11">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=12">
     </head>
 
     <body class="car-details">
@@ -567,8 +567,8 @@
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-5 pt-lg-0 pt-4">
-                        <div class="cd-right h-100">
-                            <div class="cd-right-card crc-top">
+                        <div class="cd-right cd-right-top">
+                            <div class="cd-right-card cd-right-card-top">
                                 <div class="cd-rc-top-banner cd-rc-top-quick">
                                     <p class="mb-0 sb-notice text-white">Quick sale ends in: <span class="sb-time"><span
                                                 class="sb-min">54m</span><span>:</span><span
@@ -608,8 +608,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cd-right cd-right-2">
-                                <div class="cd-right-card crc-bottom">
+                            <div class="cd-right cd-right-bottom">
+                                <div class="cd-right-card cd-right-card-bottom">
                                     <div class="cd-rc-flex">
                                         <div class="cd-rf-div">
                                             <div class="cdri-price">
@@ -633,14 +633,14 @@
                                         </div>
                                         <div class="cd-rf-div">
                                             <div class="accordion cdr-accordion" id="cdr-accordion">
-                                                <div class="accordion-item active">
+                                                <div class="accordion-item">
                                                     <h2 class="accordion-header" id="heading-1">
-                                                        <button class="accordion-button" type="button"
+                                                        <button class="accordion-button collapsed" type="button"
                                                             data-bs-toggle="collapse" data-bs-target="#collapse-1"
                                                             aria-expanded="true" aria-controls="collapse-1"> Valuations
                                                         </button>
                                                     </h2>
-                                                    <div id="collapse-1" class="accordion-collapse collapse show"
+                                                    <div id="collapse-1" class="accordion-collapse collapse"
                                                         aria-labelledby="heading-1"
                                                         data-bs-parent="#dc-sidebar-accordion">
                                                         <div class="accordion-body">
@@ -1642,6 +1642,8 @@
             aria-labelledby="gallerySliderModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
+                    <img src="./assets/img/close-circle-blue.svg" alt="Close" height="30" class="gm-close"
+                        data-bs-dismiss="modal" aria-label="Close">
                     <div class="modal-body p-xl-0 p-3">
                         <div class="cd-sliders">
                             <!-- Filter Buttons -->
@@ -1971,7 +1973,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=11"></script>
+        <script src="./assets/js/custom.js?v=12"></script>
     </body>
 
 </html>
