--- a/sell-my-car-brand.html
+++ b/sell-my-car-brand.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=11">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=12">
     </head>
 
     <body class="light-page customer-page">
@@ -1090,10 +1090,13 @@
                                 <div class="ftm-links">
                                     <h4 class="ft-title mb-0">Resources</h4>
                                     <ul class="list-unstyled ps-0">
-                                        <li><a href="#" class="ft-link">Guides</a></li>
-                                        <li><a href="#" class="ft-link">Smart valuation</a></li>
                                         <li><a href="#" class="ft-link">Become a trader</a></li>
-                                        <li><a href="#" class="ft-link">Smart report</a></li>
+                                        <li><a href="#" class="ft-link">SmartHub</a></li>
+                                        <li><a href="#" class="ft-link">Become a trader</a></li>
+                                        <li><a href="#" class="ft-link">Smart report MOT</a></li>
+                                        <li><a href="#" class="ft-link">Smart report Tax</a></li>
+                                        <li><a href="#" class="ft-link">Smart report ULEZ</a></li>
+                                        <li><a href="#" class="ft-link">Smart insights centre</a></li>
                                         <li><a href="#" class="ft-link">SmartMatch</a></li>
                                         <li><a href="#" class="ft-link">Help</a></li>
                                     </ul>
@@ -1147,7 +1150,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=11"></script>
+        <script src="./assets/js/custom.js?v=12"></script>
     </body>
 
 </html>
