--- a/smarthub-fees.html
+++ b/smarthub-fees.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=11">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=12">
     </head>
 
     <body>
@@ -112,7 +112,7 @@
                     <div class="dashboard-notification-pill">
                         <p class="dnp-desc mb-0">stibulum auctor ornare leo, non suscip magna interdum eu. Curabitur
                             pellente nibh nibh, at maximus ante.stibulum auctor ornare leo</p>
-                        <a href="#" class="dnp-link fw-medium">check</a>
+                        <a href="#" class="dnp-link fw-medium" onclick="openModal('dashboardNotification')">check</a>
                     </div>
                 </div>
             </section>
@@ -421,7 +421,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=11"></script>
+        <script src="./assets/js/custom.js?v=12"></script>
     </body>
 
 </html>
