--- a/pages.html
+++ b/pages.html
@@ -19,55 +19,55 @@
         <div class="d-flex text-center align-items-center py-5 flex-column" style="min-height: 100vh; font-size: 20px;">
             <h2 class="text-center text-white mb-4">Carsmart: Pages List</h2>
             <ol class="fw-semibold text-white text-start text-capitalize">
-                <li><a href="./live-sale.html" class="text-white">Auction: Live Sale</a></li>
-                <li><a href="./signin-1.html" class="text-white">Sign In 1</a></li>
-                <li><a href="./signin-2.html" class="text-white">Sign In 2</a></li>
-                <li><a href="./signin-3.html" class="text-white">Sign In 3</a></li>
-                <li><a href="./form-validations.html" class="text-white">Sign In form with validations</a></li>
-                <li><a href="./forgot-password.html" class="text-white">Forgot Password</a></li>
-                <li><a href="./reset-password.html" class="text-white">Reset Password</a></li>
-                <li><a href="./change-password.html" class="text-white">Change Password</a></li>
-                <li><a href="./password-confirmation.html" class="text-white">Password Confirmation</a></li>
-                <li><a href="./signup.html" class="text-white">Sign Up (3 Sub Pages)</a></li>
-                <li><a href="./signup-confirmation.html" class="text-white">Sign Up Confirmation</a></li>
-                <li><a href="./index.html" class="text-white">Homepage</a></li>
-                <li><a href="./buy-it-now.html" class="text-white">Buy it now</a></li>
-                <li><a href="./smart-connect.html" class="text-white">SmartConnect</a></li>
-                <li><a href="./favourites.html" class="text-white">Favourites</a></li>
+                <li><a href="./live-sale.html" class="text-parrot">Auction: Live Sale</a></li>
+                <li><a href="./signin-1.html" class="text-parrot">Sign In 1</a></li>
+                <li><a href="./signin-2.html" class="text-parrot">Sign In 2</a></li>
+                <li><a href="./signin-3.html" class="text-parrot">Sign In 3</a></li>
+                <li><a href="./form-validations.html" class="text-parrot">Sign In form with validations</a></li>
+                <li><a href="./forgot-password.html" class="text-parrot">Forgot Password</a></li>
+                <li><a href="./reset-password.html" class="text-parrot">Reset Password</a></li>
+                <li><a href="./change-password.html" class="text-parrot">Change Password</a></li>
+                <li><a href="./password-confirmation.html" class="text-parrot">Password Confirmation</a></li>
+                <li><a href="./signup.html" class="text-parrot">Sign Up (3 Sub Pages)</a></li>
+                <li><a href="./signup-confirmation.html" class="text-parrot">Sign Up Confirmation</a></li>
+                <li><a href="./index.html" class="text-parrot">Homepage</a></li>
+                <li><a href="./buy-it-now.html" class="text-parrot">Buy it now</a></li>
+                <li><a href="./smart-connect.html" class="text-parrot">SmartConnect</a></li>
+                <li><a href="./favourites.html" class="text-parrot">Favourites</a></li>
                                     <li><a class="dropdown-item" href="./editions.html">Editions</a></li>
-                <li><a href="./profile.html" class="text-white">Profile <small>(See the popups by clicking on the edit icons in front of payment methods)</small></a></li>
-                <li><a href="./dashboard-invoices.html" class="text-white">Dashboard Invoices</a></li>
-                <li><a href="./dashboard-credits.html" class="text-white">Dashboard Credits</a></li>
-                <li><a href="./dashboard-smart-wallet.html" class="text-white">Dashboard Smart Wallet</a></li>
-                <li><a href="./dashboard-live-bids.html" class="text-white">Dashboard Live Bids</a></li>
-                <li><a href="./dashboard-offers-pending.html" class="text-white">Dashboard Offers Pending</a></li>
-                <li><a href="./our-policy.html" class="text-white">Dashboard Outbid</a></li>
-                <li><a href="./prices-vioded-form-confirmation.html" class="text-white">Prices and Voided form confirmation</a></li>
-                <li><a href="./our-policy.html" class="text-white">Our Policy</a></li>
-                <li><a href="./car-details-private-buy-it-now.html" class="text-white">Vehicle details private buy it now</a></li>
-                <li><a href="./car-details-buy-it-now.html" class="text-white">Vehicle details buy it now</a></li>
-                <li><a href="./car-details-private-live-sale.html" class="text-white">Vehicle details private live sale</a></li>
-                <li><a href="./car-details-live-sale.html" class="text-white">Vehicle details live sale</a></li>
-                <li><a href="./car-details-private-quick-sale.html" class="text-white">Vehicle details private quick sale</a></li>
-                <li><a href="./car-details-quick-sale.html" class="text-white">Vehicle details quick sale</a></li>
-                <li><a href="./car-details-smartconnect-sale.html" class="text-white">Vehicle details smartconnect sale</a></li>
-                <li><a href="./car-details-wholesale.html" class="text-white">Vehicle details wholesale</a></li>
-                <li><a href="./car-details-smartexchange.html" class="text-white">Vehicle details smartexchange</a></li>
-                <li class="list-unstyled"><a class="text-parrot text-center">------ 23-Nov-2024 ------</a></li>
-                <li><a href="./dashboard-offered.html" class="text-white">Dashboard SmartExchange offered</a></li>
-                <li><a href="./dashboard-received.html" class="text-white">Dashboard SmartExchange received</a></li>
-                <li><a href="./dashboard-listings.html" class="text-white">Dashboard vehicle listings</a></li>
-                <li><a href="./dashboard-closed-purchases.html" class="text-white">Dashboard vehicles closed purchases</a></li>
-                <li><a href="./dashboard-voided-sales.html" class="text-white">Dashboard vehicles voided sales</a></li>
-                <li><a href="./dashboard-quotes.html" class="text-white">Dashboard Smart drop quotes</a></li>
-                <li><a href="./dashboard-accepted.html" class="text-white">Dashboard Smart drop accepted</a></li>
-                <li><a href="./live-sale-notice.html" class="text-white">Live Sale Notice</a></li>
-                <li><a href="./smarthub-fees.html" class="text-white">SmartHub Fees</a></li>
-                <li><a href="./changes-and-voided-sales.html" class="text-white">Changes and voided sales form</a></li>
-                <li class="list-unstyled"><a class="text-parrot text-center">------ 25-Nov-2024 ------</a></li>
-                <li><a href="./sell-my-car-brand.html" class="text-info">Sell My Car Landing Page</a></li>
-                <li><a href="./kyc-verification.html" class="text-info">KYC verification</a></li>
-                <li><a href="./account-reporting.html" class="text-info">Account Reporting</a></li>
+                <li><a href="./profile.html" class="text-parrot">Profile <small>(See the popups by clicking on the edit icons in front of payment methods)</small></a></li>
+                <li><a href="./dashboard-invoices.html" class="text-parrot">Dashboard Invoices</a></li>
+                <li><a href="./dashboard-credits.html" class="text-parrot">Dashboard Credits</a></li>
+                <li><a href="./dashboard-smart-wallet.html" class="text-parrot">Dashboard Smart Wallet</a></li>
+                <li><a href="./dashboard-live-bids.html" class="text-parrot">Dashboard Live Bids</a></li>
+                <li><a href="./dashboard-offers-pending.html" class="text-parrot">Dashboard Offers Pending</a></li>
+                <li><a href="./our-policy.html" class="text-parrot">Dashboard Outbid</a></li>
+                <li><a href="./prices-vioded-form-confirmation.html" class="text-parrot">Prices and Voided form confirmation</a></li>
+                <li><a href="./our-policy.html" class="text-parrot">Our Policy</a></li>
+                <li><a href="./car-details-private-buy-it-now.html" class="text-parrot">Vehicle details private buy it now</a></li>
+                <li><a href="./car-details-buy-it-now.html" class="text-parrot">Vehicle details buy it now</a></li>
+                <li><a href="./car-details-private-live-sale.html" class="text-parrot">Vehicle details private live sale</a></li>
+                <li><a href="./car-details-live-sale.html" class="text-parrot">Vehicle details live sale</a></li>
+                <li><a href="./car-details-private-quick-sale.html" class="text-parrot">Vehicle details private quick sale</a></li>
+                <li><a href="./car-details-quick-sale.html" class="text-parrot">Vehicle details quick sale</a></li>
+                <li><a href="./car-details-smartconnect-sale.html" class="text-parrot">Vehicle details smartconnect sale</a></li>
+                <li><a href="./car-details-wholesale.html" class="text-parrot">Vehicle details wholesale</a></li>
+                <li><a href="./car-details-smartexchange.html" class="text-parrot">Vehicle details smartexchange</a></li>
+                <li class="list-unstyled"><a style="font-size: 35px;" class="text-white text-center">------ 23-Nov-2024 ------</a></li>
+                <li><a href="./dashboard-offered.html" class="text-parrot">Dashboard SmartExchange offered</a></li>
+                <li><a href="./dashboard-received.html" class="text-parrot">Dashboard SmartExchange received</a></li>
+                <li><a href="./dashboard-listings.html" class="text-parrot">Dashboard vehicle listings</a></li>
+                <li><a href="./dashboard-closed-purchases.html" class="text-parrot">Dashboard vehicles closed purchases</a></li>
+                <li><a href="./dashboard-voided-sales.html" class="text-parrot">Dashboard vehicles voided sales</a></li>
+                <li><a href="./dashboard-quotes.html" class="text-parrot">Dashboard Smart drop quotes</a></li>
+                <li><a href="./dashboard-accepted.html" class="text-parrot">Dashboard Smart drop accepted</a></li>
+                <li><a href="./live-sale-notice.html" class="text-parrot">Live Sale Notice</a></li>
+                <li><a href="./smarthub-fees.html" class="text-parrot">SmartHub Fees</a></li>
+                <li><a href="./changes-and-voided-sales.html" class="text-parrot">Changes and voided sales form</a></li>
+                <li class="list-unstyled"><a style="font-size: 35px;" class="text-white text-center">------ 25-Nov-2024 ------</a></li>
+                <li><a href="./sell-my-car-brand.html" class="text-parrot">Sell My Car Landing Page</a></li>
+                <li><a href="./kyc-verification.html" class="text-parrot">KYC verification</a></li>
+                <li><a href="./account-reporting.html" class="text-parrot">Account Reporting</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
