--- a/pages.html
+++ b/pages.html
@@ -68,6 +68,13 @@
                 <li><a href="./sell-my-car-brand.html" class="text-parrot">Sell My Car Landing Page</a></li>
                 <li><a href="./kyc-verification.html" class="text-parrot">KYC verification</a></li>
                 <li><a href="./account-reporting.html" class="text-parrot">Account Reporting</a></li>
+                <li class="list-unstyled"><a style="font-size: 35px;" class="text-white text-center">------ 28-Nov-2024 ------</a></li>
+                <li><a href="./car-details-sold.html" class="text-info">Vehicle Details Sold</a></li>
+                <li><a href="./car-details-sold-seller-info.html" class="text-info">Vehicle Details Sold - Seller Information</a></li>
+                <li><a href="./car-details-sold-buyer-info.html" class="text-info">Vehicle Details Sold - Buyers Information</a></li>
+                <li><a href="./fee-payment.html" class="text-info">Fee Payment</a></li>
+                <li><a href="./smart-wallet-add-fund.html" class="text-info">Smart Wallet Add Fund</a></li>
+                <li><a href="./smart-wallet-balance.html" class="text-info">Smart Wallet Balance</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
