New Pages done.

--- a/dashboard-quotes.html
+++ b/dashboard-quotes.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=12">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=13">
     </head>
 
     <body>
@@ -321,8 +321,8 @@
                                                     <span class="dcmt-pill dcmt-pill-green">Quotes received</span>
                                                 </td>
                                                 <td class="text-start">
-                                                    <span class="text-decoration-underline">7 <span
-                                                            class="text-parrot">+</span></span>
+                                                    <a href="./smart-drop-quotes-received.html" class="text-white text-decoration-underline">7 <span
+                                                            class="text-parrot">+</span></a>
                                                 </td>
                                                 <td class="text-center">
                                                     <span>13.10.2024</span>
@@ -379,8 +379,8 @@
                                                     <span class="dcmt-pill dcmt-pill-green">Quotes received</span>
                                                 </td>
                                                 <td class="text-start">
-                                                    <span class="text-decoration-underline">8 <span
-                                                            class="text-parrot">+</span></span>
+                                                    <a href="./smart-drop-quotes-received.html" class="text-white text-decoration-underline">8 <span
+                                                            class="text-parrot">+</span></a>
                                                 </td>
                                                 <td class="text-center">
                                                     <span>13.10.2024</span>
@@ -437,7 +437,7 @@
                                                     <span class="dcmt-pill dcmt-pill-orange">Awaiting</span>
                                                 </td>
                                                 <td class="text-start">
-                                                    <span class="text-decoration-underline">0</span>
+                                                    <a href="./smart-drop-quotes-received.html" class="text-white text-decoration-underline">0</a>
                                                 </td>
                                                 <td class="text-center">
                                                     <span>13.10.2024</span>
@@ -494,7 +494,7 @@
                                                     <span class="dcmt-pill dcmt-pill-green">Accepted</span>
                                                 </td>
                                                 <td class="text-start">
-                                                    <span class="text-decoration-underline">1</span>
+                                                    <a href="./smart-drop-quotes-received.html" class="text-white text-decoration-underline">1</a>
                                                 </td>
                                                 <td class="text-center">
                                                     <span>13.10.2024</span>
@@ -762,7 +762,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=12"></script>
+        <script src="./assets/js/custom.js?v=13"></script>
     </body>
 
 </html>
