--- a/pages.html
+++ b/pages.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=12">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=13">
     </head>
 
     <body>
@@ -34,7 +34,6 @@
                 <li><a href="./buy-it-now.html" class="text-parrot">Buy it now</a></li>
                 <li><a href="./smart-connect.html" class="text-parrot">SmartConnect</a></li>
                 <li><a href="./favourites.html" class="text-parrot">Favourites</a></li>
-                                    <li><a class="dropdown-item" href="./editions.html">Editions</a></li>
                 <li><a href="./profile.html" class="text-parrot">Profile <small>(See the popups by clicking on the edit icons in front of payment methods)</small></a></li>
                 <li><a href="./dashboard-invoices.html" class="text-parrot">Dashboard Invoices</a></li>
                 <li><a href="./dashboard-credits.html" class="text-parrot">Dashboard Credits</a></li>
@@ -70,11 +69,17 @@
                 <li><a href="./account-reporting.html" class="text-parrot">Account Reporting</a></li>
                 <li class="list-unstyled"><a style="font-size: 35px;" class="text-white text-center">------ 28-Nov-2024 ------</a></li>
                 <li><a href="./car-details-sold.html" class="text-info">Vehicle Details Sold</a></li>
-                <li><a href="./car-details-sold-seller-info.html" class="text-info">Vehicle Details Sold - Seller Information</a></li>
-                <li><a href="./car-details-sold-buyer-info.html" class="text-info">Vehicle Details Sold - Buyers Information</a></li>
+                <li><a href="./car-details-sold-seller.html" class="text-info">Vehicle Details Sold - Seller Information</a></li>
+                <li><a href="./car-details-sold-buyer.html" class="text-info">Vehicle Details Sold - Buyers Information</a></li>
                 <li><a href="./fee-payment.html" class="text-info">Fee Payment</a></li>
                 <li><a href="./smart-wallet-add-fund.html" class="text-info">Smart Wallet Add Fund</a></li>
                 <li><a href="./smart-wallet-balance.html" class="text-info">Smart Wallet Balance</a></li>
+                <li><a href="./smartconnect-seller-information-for-private-vendor.html" class="text-info">Vendor Purchase - Private Seller information</a></li>
+                <li><a href="./smartconnect-seller-information-for-vendor-buys.html" class="text-info">Smart Connect Seller information (When Vendor Buys)</a></li>
+                <li><a href="./smartconnect-buyer-information-for-vendor-sells.html" class="text-info">Smart Connect Buyer  information (When Vendor Sells) </a></li>
+                <li><a href="./smart-drop-get-offers.html" class="text-info">Book Smart Drop </a></li>
+                <li><a href="./smart-drop-received-quotes.html" class="text-info">Book Smart Drop Received Quotes from Dashboard (7+) links.</a></li>
+                <li><a href="./payment-from-chat.html" class="text-info">Payment form chat</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
@@ -83,7 +88,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=12"></script>
+        <script src="./assets/js/custom.js?v=13"></script>
     </body>
 
 </html>
