--- a/car-details-private-live-sale.html
+++ b/car-details-private-live-sale.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=12">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=13">
     </head>
 
     <body class="car-details">
@@ -318,14 +318,17 @@
                                     </div>
                                 </div>
                                 <div class="cd-flex-3">
-                                    <h4 class="cd-title">Technical health (Mechanical & Electrical)</h4>
+                                    <h4 class="cd-title">Vehicle health</h4>
                                     <div class="cd-rows">
                                         <div class="cd-row">
                                             <div class="cd-col">
-                                                <span class="cdr-label"> Shared by the seller </span>
+                                                <span class="cdr-label"> Exterior status </span>
                                             </div>
                                             <div class="cd-col">
-                                                <span class="cdr-value">NO</span>
+                                                <span class="d-flex align-items-center gap-2">
+                                                    <span class="cdr-value">Grade A</span>
+                                                    <img src="./assets/img/info-icon.svg" alt="Info" onclick="openModal('exteriorGradingModal')" class="cdc-info">
+                                                </span>
                                             </div>
                                         </div>
                                         <div class="cd-border"></div>
@@ -1539,7 +1542,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=12"></script>
+        <script src="./assets/js/custom.js?v=13"></script>
     </body>
 
 </html>
