--- a/pages.html
+++ b/pages.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=13">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=14">
     </head>
 
     <body>
@@ -80,6 +80,7 @@
                 <li><a href="./smart-drop-get-offers.html" class="text-info">Book Smart Drop </a></li>
                 <li><a href="./smart-drop-received-quotes.html" class="text-info">Book Smart Drop Received Quotes from Dashboard (7+) links.</a></li>
                 <li><a href="./payment-from-chat.html" class="text-info">Payment form chat</a></li>
+                <li><a href="./live-chat.html" class="text-info">Live Chat Page</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
@@ -88,7 +89,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=13"></script>
+        <script src="./assets/js/custom.js?v=14"></script>
     </body>
 
 </html>
